--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1>Congratulations</h1>
-    <h2>This application was deployed using AWS CodeDeploy</h2>
+    <h2>This application was deployed using AWS CodeDeploy version 3</h2>
     <h2>Power by AWS CodePipeline & Github WebHooks.</h2>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
